@@ -2,6 +2,7 @@ Revision history for jslint4java.
 
 1.3-SNAPSHOT
     - Switch build to maven.
+    - Update to JSLint 2008-09-19.
 
 1.2.1 2008-09-07
     - Recompile with Java 5.
